In-memory Datenbank aufgesetzt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+## In memory Datenbank (Schnell zum Testen), diese Datenbank wird später mit unserer richtigen Datenbank ausgetauscht
+## H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+## Please add this URL inside: http://localhost:8080/h2 --> JDBC URL=jdbc:h2:file:~/test
+spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
