create-drop Property für DB hinzugefügt (auskommentiert)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.url=jdbc:h2:file:~/test
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+
+## Löscht die DB-Tabellen, die beim Starten der Applikation da sind, und richtet die neu auf
+#spring.jpa.hibernate.ddl-auto=create-drop
