--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 ## In memory Datenbank (Schnell zum Testen), diese Datenbank wird später mit unserer richtigen Datenbank ausgetauscht
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://db.f4.htw-berlin.de:5432/_s0564116__burgerverein
+spring.datasource.username=_s0564116__burgerverein_generic
+spring.datasource.password=123123Issam@
+spring.jpa.generate-ddl=true
 ## H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
