--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-
+	   <dependency>
+		<groupId>org.postgresql</groupId>
+		<artifactId>postgresql</artifactId>
+		<scope>runtime</scope>
+		<version>9.4-1206-jdbc42</version>
+	    </dependency>
 		<!-- für unsere In memory DB -->
 		<dependency>
 			<groupId>com.h2database</groupId>
