In memory Datenbank auskommentiert

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,10 @@ spring.datasource.username=_s0564116__burgerverein_generic
 spring.datasource.password=123123Issam@
 spring.jpa.generate-ddl=true
 ## H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
 ## Please add this URL inside: http://localhost:8080/h2 --> JDBC URL=jdbc:h2:file:~/test
-spring.datasource.url=jdbc:h2:file:~/test
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:file:~/test
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
