mail server properties for testing purposes added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,11 @@ spring.datasource.driver-class-name=org.h2.Driver
 
 ## Löscht die DB-Tabellen, die beim Starten der Applikation da sind, und richtet die neu auf
 #spring.jpa.hibernate.ddl-auto=create-drop
+
+##mail server for testing purposes (access data for mailtrap: Github account Milena)
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=4e208868cb1b89
+spring.mail.password=700123322baa0b
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
