JPA and mail properties added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,39 @@
 ## In memory Datenbank (Schnell zum Testen), diese Datenbank wird später mit unserer richtigen Datenbank ausgetauscht
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://db.f4.htw-berlin.de:5432/_s0564116__burgerverein
-spring.datasource.username=_s0564116__burgerverein_generic
-spring.datasource.password=123123Issam@
-spring.jpa.generate-ddl=true
+#spring.datasource.url=jdbc:postgresql://db.f4.htw-berlin.de:5432/_s0564116__burgerverein
+#spring.datasource.username=_s0564116__burgerverein_generic
+#spring.datasource.password=123123Issam@
+#spring.jpa.generate-ddl=true
+
 ## H2
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
 ## Please add this URL inside: http://localhost:8080/h2 --> JDBC URL=jdbc:h2:file:~/test
-#spring.datasource.url=jdbc:h2:file:~/test
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+
+##mail server for testing purposes (access data for mailtrap: Github account Milena)
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=4e208868cb1b89
+spring.mail.password=700123322baa0b
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+##unsure:
+
+###### JPA Properties ######
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql = true
+spring.jpa.generate-ddl=true
+
+server.port = 8080
+logging.level.org.springframework = WARN
+logging.level.org.hibernate = WARN
+logging.level.com.springsecurity.demo = DEBUG
+
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
