--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,19 @@
 		<scope>runtime</scope>
 		<version>9.4-1206-jdbc42</version>
 	    </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<!-- um html auszuprobieren -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 		<!-- für unsere In memory DB -->
 		<dependency>
 			<groupId>com.h2database</groupId>
