einpaar änderungen vor dem testen

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,27 @@
 ## In memory Datenbank (Schnell zum Testen), diese Datenbank wird später mit unserer richtigen Datenbank ausgetauscht
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://db.f4.htw-berlin.de:5432/_s0564116__burgerverein
-spring.datasource.username=_s0564116__burgerverein_generic
-spring.datasource.password=123123Issam@
-spring.jpa.generate-ddl=true
+#spring.datasource.url=jdbc:postgresql://db.f4.htw-berlin.de:5432/_s0564116__burgerverein
+#spring.datasource.username=_s0564116__burgerverein_generic
+#spring.datasource.password=123123Issam@
+#spring.jpa.generate-ddl=true
 ## H2
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
 ## Please add this URL inside: http://localhost:8080/h2 --> JDBC URL=jdbc:h2:file:~/test
-#spring.datasource.url=jdbc:h2:file:~/test
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
 
 ## Löscht die DB-Tabellen, die beim Starten der Applikation da sind, und richtet die neu auf
 #spring.jpa.hibernate.ddl-auto=create-drop
+
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/testdb?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=123456
+#spring.jpa.generate-ddl=true
+
+#App properties
+buergervereinHSH.app.jwtSecret=jwtbuergervereinHSHSecretKey
+buergervereinHSH.app.jwtExpiration=86400
