--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
 			<version>0.9.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
