neues Passwort Postqres, PostgresDialect hinzugefügt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://db.f4.htw-berlin.de:5432/_s0564116__burgerverein
+pring.datasource.url=jdbc:postgresql://db.f4.htw-berlin.de:5432/_s0564116__burgerverein
 spring.datasource.username=_s0564116__burgerverein_generic
-spring.datasource.password=Haya@2715
+spring.datasource.password=85p.AKy_
 spring.jpa.generate-ddl=true
 
 ## In memory Datenbank (Schnell zum Testen), diese Datenbank wird später mit unserer richtigen Datenbank ausgetauscht
@@ -19,10 +19,8 @@ spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=create-drop
 
 ###### JPA Properties ######
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-#pring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+pring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql = true
-##### Hibernate ddl auto (create, create-drop, validate, update) --> bereits (ohne hibernate) oben bei DB angegeben?
 spring.jpa.hibernate.ddl-auto = update
 
 ##mail server for testing purposes (access data for mailtrap: Github account Milena)
