--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>1.4.196</version>
+<!--			<version>1.4.196</version>-->
 		</dependency>
 
 		<!-- für Registrierung/Login Backend -->
