--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,16 +11,11 @@ spring.h2.console.path=/h2
 spring.datasource.url=jdbc:h2:file:./test
 spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.generate-ddl=true
+
 
 ## Löscht die DB-Tabellen, die beim Starten der Applikation da sind, und richtet die neu auf
 #spring.jpa.hibernate.ddl-auto=create-drop
-
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/testdb?useSSL=false
-#spring.datasource.username=root
-#spring.datasource.password=123456
-#spring.jpa.generate-ddl=true
 
 #App properties
 buergervereinHSH.app.jwtSecret=jwtbuergervereinHSHSecretKey
