--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,19 @@
 #Postgres
-spring.datasource.url=jdbc:postgresql://db.f4.htw-berlin.de:5432/_s0564116__burgerverein
-spring.datasource.username=_s0564116__burgerverein_generic
-spring.datasource.password=85p.AKy_
-spring.jpa.generate-ddl=true
+#spring.datasource.url=jdbc:postgresql://db.f4.htw-berlin.de:5432/_s0564116__burgerverein
+#spring.datasource.username=_s0564116__burgerverein_generic
+#spring.datasource.password=85p.AKy_
+#spring.jpa.generate-ddl=true
 
 ## In memory Datenbank (Schnell zum Testen), diese Datenbank wird später mit unserer richtigen Datenbank ausgetauscht
 # #H2
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
 # #Please add this URL inside: http://localhost:8080/h2 --> JDBC URL=jdbc:h2:file:~/test
 #
-#spring.datasource.url=jdbc:h2:file:~/test
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
 #
 ## Löscht die DB-Tabellen, die beim Starten der Applikation da sind, und richtet die neu auf
 #spring.jpa.hibernate.ddl-auto=create-drop
