Service und Methode zum Versenden von Emails mit Anhang, neue Datenbank, Test.pdf

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
-## PostgreSQL
-spring.datasource.url=jdbc:postgresql://db.f4.htw-berlin.de:5432/_s0564116__burgerverein
-spring.datasource.username=_s0564116__burgerverein_generic
-spring.datasource.password=85p.AKy_
+##Datenbank auf Uniserver bvhs   (die anderen beiden auskommentiert am Ende des Dokuments)
+spring.datasource.url=jdbc:postgresql://bvhs.f4.htw-berlin.de:5432/buergerverein
+spring.datasource.username=root
+spring.datasource.password=VRR1Ud.A_
 spring.jpa.generate-ddl=true
+
+## PostgreSQL
+#spring.datasource.url=jdbc:postgresql://db.f4.htw-berlin.de:5432/_s0564116__burgerverein
+#spring.datasource.username=_s0564116__burgerverein_generic
+#spring.datasource.password=85p.AKy_
+#spring.jpa.generate-ddl=true
 
 ## In memory Datenbank (Schnell zum Testen), diese Datenbank wird später mit unserer richtigen Datenbank ausgetauscht
 # #H2
@@ -30,6 +36,7 @@ spring.mail.username=4e208868cb1b89
 spring.mail.password=700123322baa0b
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
 
 server.port = 8080
 logging.level.org.springframework = WARN
