--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,12 +16,12 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 #
 ## Löscht die DB-Tabellen, die beim Starten der Applikation da sind, und richtet die neu auf
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create-drop
 
 ###### JPA Properties ######
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto = update
 
 ##mail server for testing purposes (access data for mailtrap: Github account Milena)
 spring.mail.host=smtp.mailtrap.io
