--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,28 @@ spring.datasource.url=jdbc:postgresql://bvhs.f4.htw-berlin.de:5432/buergerverein
 spring.datasource.username=root
 spring.datasource.password=VRR1Ud.A_
 spring.jpa.generate-ddl=true
+#Um GS Datensätze einzufügen bei Start des Programms (data.sql): (einmalig aktiviert, dann wieder deaktiviert, sonst Error)
+spring.datasource.initialization-mode=always
+
+
+###### JPA Properties ######
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+
+##mail server for testing purposes (access data for mailtrap: Github account Milena)
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=4e208868cb1b89
+spring.mail.password=700123322baa0b
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+server.port = 8080
+logging.level.org.springframework = WARN
+logging.level.org.hibernate = WARN
+logging.level.com.buergervereinHSH.BackendProject = DEBUG
 
 ## PostgreSQL
 #spring.datasource.url=jdbc:postgresql://db.f4.htw-berlin.de:5432/_s0564116__burgerverein
@@ -23,22 +45,3 @@ spring.jpa.generate-ddl=true
 #
 ## Löscht die DB-Tabellen, die beim Starten der Applikation da sind, und richtet die neu auf
 #spring.jpa.hibernate.ddl-auto=create-drop
-
-###### JPA Properties ######
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
-
-##mail server for testing purposes (access data for mailtrap: Github account Milena)
-spring.mail.host=smtp.mailtrap.io
-spring.mail.port=2525
-spring.mail.username=4e208868cb1b89
-spring.mail.password=700123322baa0b
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-
-
-server.port = 8080
-logging.level.org.springframework = WARN
-logging.level.org.hibernate = WARN
-logging.level.com.buergervereinHSH.BackendProject = DEBUG
