--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,10 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
-			<version>9.4-1206-jdbc42</version>
+			<version>9.4.1211</version>   <!--neuere version!-->
+			<!--<version>9.4-1206-jdbc42</version>-->
 		</dependency>
+
 
 
 		<!-- für unsere In memory DB -->
