--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=VRR1Ud.A_
 spring.jpa.generate-ddl=true
 #Um GS Datensätze einzufügen bei Start des Programms (data.sql): (einmalig aktiviert, dann wieder deaktiviert, sonst Error)
-spring.datasource.initialization-mode=always
+#spring.datasource.initialization-mode=always
 
 
 ###### JPA Properties ######
@@ -46,10 +46,10 @@ logging.level.com.buergervereinHSH.BackendProject = DEBUG
 #
 ## Löscht die DB-Tabellen, die beim Starten der Applikation da sind, und richtet die neu auf
 
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 #App properties
-buergervereinHSH.app.jwtSecret=jwtbuergervereinHSHSecretKey
-buergervereinHSH.app.jwtExpiration=86400
+#buergervereinHSH.app.jwtSecret=jwtbuergervereinHSHSecretKey
+#buergervereinHSH.app.jwtExpiration=86400
 
 
