some comments added and small errors fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,7 +49,8 @@ logging.level.com.buergervereinHSH.BackendProject = DEBUG
 #spring.jpa.hibernate.ddl-auto=create-drop
 
 #App properties
-#buergervereinHSH.app.jwtSecret=jwtbuergervereinHSHSecretKey
-#buergervereinHSH.app.jwtExpiration=86400
+#signatur:
+buergervereinHSH.app.jwtSecret=jwtbuergervereinHSHSecretKey
+buergervereinHSH.app.jwtExpiration=86400
 
 
