--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,11 @@ spring.datasource.url=jdbc:postgresql://bvhs.f4.htw-berlin.de:5432/buergerverein
 spring.datasource.username=root
 spring.datasource.password=VRR1Ud.A_
 spring.jpa.generate-ddl=true
-#Um GS Datensätze einzufügen bei Start des Programms (data.sql): (einmalig aktiviert, dann wieder deaktiviert, sonst Error)
+#Um GS Datensätze einzufügen bei Start des Programms (data.sql): (einmalig aktiviert, dann wieder deaktiviert, sonst Error,
+# außer gleichzeit create-drop aktiviert. Achtung: roles table muss gefüllt werden, sonst keine Vergabe von Rollen)
 #spring.datasource.initialization-mode=always
 
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 ###### JPA Properties ######
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
@@ -46,7 +48,7 @@ logging.level.com.buergervereinHSH.BackendProject = DEBUG
 #
 ## Löscht die DB-Tabellen, die beim Starten der Applikation da sind, und richtet die neu auf
 
-#spring.jpa.hibernate.ddl-auto=create-drop
+
 
 #App properties
 #signatur:
