Rechtevergabe der API Methoden in forms

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=VRR1Ud.A_
 spring.jpa.generate-ddl=true
 #Um GS Datensätze einzufügen bei Start des Programms (data.sql): (einmalig aktiviert, dann wieder deaktiviert, sonst Error,
 # außer gleichzeit create-drop aktiviert. Achtung: roles table muss gefüllt werden, sonst keine Vergabe von Rollen)
-#spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=always
 
 #spring.jpa.hibernate.ddl-auto=create-drop
 
