--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=VRR1Ud.A_
 spring.jpa.generate-ddl=true
 #Um GS Datensätze einzufügen bei Start des Programms (data.sql): (einmalig aktiviert, dann wieder deaktiviert, sonst Error,
 # außer gleichzeit create-drop aktiviert. Achtung: roles table muss gefüllt werden, sonst keine Vergabe von Rollen)
-spring.datasource.initialization-mode=always
+#spring.datasource.initialization-mode=always
 
 ## In memory Datenbank (Schnell zum Testen), diese Datenbank wird später mit unserer richtigen Datenbank ausgetauscht
 ##H2
@@ -19,7 +19,7 @@ spring.datasource.initialization-mode=always
 #spring.datasource.driver-class-name=org.h2.Driver
 
 ## Löscht die DB-Tabellen, die beim Starten der Applikation da sind, und richtet die neu auf
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create-drop
 
 ####### JPA Properties ######
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
