--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.jpa.generate-ddl=true
 #spring.datasource.driver-class-name=org.h2.Driver
 
 ## Löscht die DB-Tabellen, die beim Starten der Applikation da sind, und richtet die neu auf
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 ####### JPA Properties ######
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
@@ -31,13 +31,15 @@ spring.jpa.show-sql = true
 buergervereinHSH.app.jwtSecret=jwtbuergervereinHSHSecretKey
 buergervereinHSH.app.jwtExpiration=86400
 
-##mail server for testing purposes (access data for mailtrap: Github account Milena)
+##mail server for testing purposes (eigenen Account anlegen und bei username und password Daten eintragen)
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=2525
-spring.mail.username=4e208868cb1b89
-#bb0b74cc061c50
-spring.mail.password=700123322baa0b
-#297514dde37de6700123322baa0b
+spring.mail.username=
+#4e208868cb1b89 (milena)
+#bb0b74cc061c50 (ksenia)
+spring.mail.password=
+#700123322baa0b (milena)
+#297514dde37de6700123322baa0b (ksenia)
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
